[package]
name = "g3"
version = "0.1.0"
authors = ["Werner Laurensse <werner@alman.ax>"]
edition = "2021"
resolver = "2"

[lib]
#crate-type = ["cdylib"]

[dependencies]
glam = { version = "0.22.0", optional = true }

#[[example]]
#name = "ball"
#required-features = ["plot"]
#
#[[example]]
#name = "differentiation"
#required-features = ["plot"]
#
#[[example]]
#name = "icosahedron"
#required-features = ["plot"]
#
#[[example]]
#name = "planes"
#required-features = ["plot"]