[package]
name = "g3"
version = "0.1.0"
description = "Neat library for computer graphics based on geometric algebra"
authors = ["Werner Laurensse <werner@alman.ax>"]
edition = "2021"
resolver = "2"
homepage = "https://github.com/wrnrlr/g3"
repository = "https://github.com/wrnrlr/g3"
readme = "readme.md"
license = "ISC"
keywords = ["math", "graphics", "geometry"]
categories = ["graphics", "mathematics", "wasm"]

[lib]

[dependencies]
glam = { version = "0.22.0", optional = true }
mint = { version = "0.5.9", optional = true }
bytemuck = { version = "1.12", optional = true, features = ["nightly_portable_simd"] }

#[[example]]
#name = "ball"
#required-features = ["plot"]
#
#[[example]]
#name = "differentiation"
#required-features = ["plot"]
#
#[[example]]
#name = "icosahedron"
#required-features = ["plot"]
#
#[[example]]
#name = "planes"
#required-features = ["plot"]