[package]
name = "g3"
version = "0.1.4"
description = "Neat library for computer graphics based on geometric algebra"
authors = ["Werner Laurensse <werner@alman.ax>"]
edition = "2021"
resolver = "2"
homepage = "https://github.com/wrnrlr/g3"
repository = "https://github.com/wrnrlr/g3"
readme = "readme.md"
license = "ISC"
keywords = ["math", "graphics", "geometry"]
categories = ["graphics", "mathematics", "wasm"]

[lib]

[dependencies]
glam = { version = "0.22.0", optional = true }
mint = { version = "0.5.9", optional = true }
hecs = { version = "0.9.1", optional = true }
glow = { version = "0.11.2", optional = true }
bytemuck = { version = "1.12.3", optional = true, features = ["derive", "nightly_portable_simd"] }
egui = { version = "0.19", features = ["mint"], optional = true }
eframe = { version = "0.19", features = ["persistence"], optional = true }
winit = { version = "0.27.5", optional = true }

[features]
renderer = ["glam", "hecs", "glow", "bytemuck"]

[[example]]
name = "renderer"
required-features = ["renderer", "egui", "eframe", "eframe/glow"]


#[[example]]
#name = "ball"
#required-features = ["plot"]
#
#[[example]]
#name = "differentiation"
#required-features = ["plot"]
#
#[[example]]
#name = "icosahedron"
#required-features = ["plot"]
#
#[[example]]
#name = "planes"
#required-features = ["plot"]